--- a/src/VisualStudio/TestUtilities/VisualStudioTestUtilities.csproj
+++ b/src/VisualStudio/TestUtilities/VisualStudioTestUtilities.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Workspace\Workspace.cs" />
   </ItemGroup>
   <ItemGroup>
+    <InternalsVisibleToTest Include="Microsoft.CodeAnalysis.TestImpact.VisualStudio.IntegrationTests" />
     <InternalsVisibleToTest Include="Roslyn.VisualStudio.Test.Setup" />
   </ItemGroup>
   <ItemGroup>
@@ -110,14 +111,6 @@
       <Project>{e2e889a5-2489-4546-9194-47c63e49eaeb}</Project>
       <Name>Diagnostics</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Workspaces\Core\Portable\Workspaces.csproj">
-      <Project>{5f8d2414-064a-4b3a-9b42-8e2a04246be5}</Project>
-      <Name>Workspaces</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Core\Def\ServicesVisualStudio.csproj">
-      <Project>{86fd5b9a-4fa0-4b10-b59f-cfaf077a859c}</Project>
-      <Name>ServicesVisualStudio</Name>
-    </ProjectReference>
     <ProjectReference Include="..\CSharp\Repl\CSharpVisualStudioRepl.csproj">
       <Project>{737ff62c-f068-4317-84d0-bfb210c17a4e}</Project>
       <Name>CSharpVisualStudioRepl</Name>
@@ -125,6 +118,14 @@
     <ProjectReference Include="..\InteractiveServices\VisualStudioInteractiveServices.csproj">
       <Project>{a31228bb-f05c-4d4a-b98a-0e681d876b7c}</Project>
       <Name>VisualStudioInteractiveServices</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Workspaces\Core\Portable\Workspaces.csproj">
+      <Project>{5F8D2414-064A-4B3A-9B42-8E2A04246BE5}</Project>
+      <Name>Workspaces</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Core\Def\ServicesVisualStudio.csproj">
+      <Project>{86FD5B9A-4FA0-4B10-B59F-CFAF077A859C}</Project>
+      <Name>ServicesVisualStudio</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="..\..\..\build\Targets\VSL.Imports.targets" />
