Wrapping all `DTE` calls in `IntegrationHelper.RetryRpcCall`, as they tend to fail with `RPC_E_CALL_REJECTED`.

--- a/src/VisualStudio/TestUtilities/VisualStudioTestUtilities.csproj
+++ b/src/VisualStudio/TestUtilities/VisualStudioTestUtilities.csproj
@@ -21,6 +21,7 @@
     <Compile Include="Extensions\DteExtensions.cs" />
     <Compile Include="Extensions\IntegrationServiceExtensions.cs" />
     <Compile Include="IntegrationHelper.cs" />
+    <Compile Include="Interop\Kernel32.cs" />
     <Compile Include="Remoting\EditorWindowWrapper.cs" />
     <Compile Include="Remoting\RemotingHelper.cs" />
     <Compile Include="Remoting\WorkspaceWrapper.cs" />
